--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pids
+*.pid
+*.seed
+*.pid.lock
+logs/
+*.log
+dist/
+build/
+*.tgz
+*.tar.gz
+
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+.vscode/
+.idea/
+*.swp
+*.swo
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-v100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+*.tmp
+*.temp
+.cache/
+
+coverage/
+.nyc_output/
